--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
               <div class="tag-text">RSS Reader</div>
             </div>
             <div class="tag">
-              <div class="tag-text">Telegram</div>
-              <div class="tag-text cutted">bot</div>
-              <div class="tag-text">app</div>
+              <div class="tag-text">Telegram Mini App</div>
             </div>
             <div class="tag_users">
               <div class="animoji_1"><img src="images/Композиция-1вывыв22.gif" loading="lazy" alt="" class="image_animoji_1"></div>
@@ -49,7 +47,7 @@
             </div>
           </div>
         </aside>
-        <a href="#" class="cta-button w-inline-block">
+        <a href="https://t.me/newskeeperbot" target="_parent" class="cta-button w-inline-block">
           <div class="button_name">To the app</div>
           <div class="icon_holder"><img src="images/Group-10.svg" loading="lazy" alt="" class="image_arrow_btn"></div>
         </a>
@@ -100,25 +98,25 @@
         <div class="donate_link_block">
           <div class="donate_icons_block"><img src="images/Group-303.svg" loading="lazy" alt="" class="wallet"><img src="images/Group-10ww.svg" loading="lazy" alt="" class="arrow_donate"></div>
           <div class="donate_text">
-            <a href="#" class="donate_link">Support with donate</a>
-            <div class="donate_link"> if you like our product</div>
+            <a href="https://www.patreon.com/newskeeper" class="donate_link">Support News Kepper</a>
+            <div class="donate_link">on Patreon</div>
           </div>
         </div>
       </div>
-      <a href="#" class="cta-button big w-inline-block">
+      <a href="https://t.me/newskeeperbot" target="_blank" class="cta-button big w-inline-block">
         <div class="button_name big">To the app</div>
         <div class="icon_holder big"><img src="images/Group-10.svg" loading="lazy" alt="" class="image_arrow-big_btn big"></div>
       </a>
       <div class="contacts_list">
         <div class="contacts">
-          <a href="#" target="_blank" class="link">Telegram</a>
-          <a href="#" target="_blank" class="link">Reddit</a>
-          <div class="mail_link">
+          <a href="https://t.me/newskeeperio" target="_blank" class="link">Telegram</a>
+          <a href="https://www.reddit.com/r/NewsKeeper/" target="_blank" class="link">Reddit</a>
+          <!-- <div class="mail_link">
             <a href="#" target="_blank" class="link mail">info@newskeeper.com</a>
             <a href="#" class="copy_mail_btn w-inline-block">
               <div class="copy_mail_block"><img src="images/solar_copy-bold-duotone.svg" loading="lazy" alt="" class="copy_icon"></div>
             </a>
-          </div>
+          </div> -->
         </div>
         <div class="copyright">© Newskeeper</div>
       </div>
