--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
 <html data-wf-page="65c53209364c6943ff0634b6" data-wf-site="65c53209364c6943ff0634aa">
+
 <head>
   <meta charset="utf-8">
   <title>News Keeper - Telegram RSS Reader</title>
@@ -12,23 +13,29 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JE7QTQ407R"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'G-JE7QTQ407R');
-    </script>
+    gtag('config', 'G-JE7QTQ407R');
+  </script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Mulish:regular,500,600,700,800,900","Crimson Text:regular,italic,600,600italic,700,700italic"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Mulish:regular,500,600,700,800,900", "Crimson Text:regular,italic,600,600italic,700,700italic"] } });</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="favicon.ico" rel="apple-touch-icon">
 </head>
+
 <body class="body">
   <div class="w-layout-blockcontainer header_block w-clearfix w-container">
     <div class="head_block_content">
-      <div class="picture_app"><img src="images/Frame-230.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 1279px) 96vw, 1150px" srcset="images/Frame-230-p-500.png 500w, images/Frame-230-p-800.png 800w, images/Frame-230-p-1080.png 1080w, images/Frame-230-p-1600.png 1600w, images/Frame-230-p-2000.png 2000w, images/Frame-230-p-2600.png 2600w, images/Frame-230-p-3200.png 3200w, images/Frame-230.png 3450w" alt="" class="image_app"></div>
+      <div class="picture_app"><img src="images/Frame-230.png" loading="lazy"
+          sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 1279px) 96vw, 1150px"
+          srcset="images/Frame-230-p-500.png 500w, images/Frame-230-p-800.png 800w, images/Frame-230-p-1080.png 1080w, images/Frame-230-p-1600.png 1600w, images/Frame-230-p-2000.png 2000w, images/Frame-230-p-2600.png 2600w, images/Frame-230-p-3200.png 3200w, images/Frame-230.png 3450w"
+          alt="" class="image_app"></div>
       <div class="caption_app">
         <aside class="description_app">
           <div class="text_caption">
@@ -47,8 +54,10 @@
               <div class="tag-text">Telegram Mini App</div>
             </div>
             <div class="tag_users">
-              <div class="animoji_1"><img src="images/Композиция-1вывыв22.gif" loading="lazy" alt="" class="image_animoji_1"></div>
-              <div class="animoji_1"><img src="images/Композиция-1цуцуцу.gif" loading="lazy" alt="" class="image_animoji_2"></div>
+              <div class="animoji_1"><img src="images/Композиция-1вывыв22.gif" loading="lazy" alt=""
+                  class="image_animoji_1"></div>
+              <div class="animoji_1"><img src="images/Композиция-1цуцуцу.gif" loading="lazy" alt=""
+                  class="image_animoji_2"></div>
               <div class="tag">
                 <div class="tag-text">1,2k + users</div>
               </div>
@@ -70,10 +79,13 @@
             <div class="text-block-2">RSS reader</div>
             <div class="text-block-2 colored-text">in Telegram</div>
           </div>
-          <div class="text-description">Follow all your favorite sources in one place and receive notifications as soon as new articles are published</div>
+          <div class="text-description">Follow all your favorite sources in one place and receive notifications as soon
+            as new articles are published</div>
         </div>
         <div class="animation">
-          <div class="lottie-animation-2" data-w-id="15e7a19b-68ac-4308-53c4-269f5a125539" data-animation-type="lottie" data-src="documents/Flow-1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="5.5" data-duration="0"></div>
+          <div class="lottie-animation-2" data-w-id="15e7a19b-68ac-4308-53c4-269f5a125539" data-animation-type="lottie"
+            data-src="documents/Flow-1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0"
+            data-renderer="svg" data-default-duration="5.5" data-duration="0"></div>
         </div>
       </div>
     </div>
@@ -87,7 +99,9 @@
           <div class="text-description">Just send a link to blog or import OPML file, directly to Telegram chat</div>
         </div>
         <div class="animation yellow">
-          <div data-w-id="75f7999d-efad-0369-5a41-dcd3e5f36133" data-animation-type="lottie" data-src="documents/Flow-4-4.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="9.85" data-duration="0"></div>
+          <div data-w-id="75f7999d-efad-0369-5a41-dcd3e5f36133" data-animation-type="lottie"
+            data-src="documents/Flow-4-4.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0"
+            data-renderer="svg" data-default-duration="9.85" data-duration="0"></div>
         </div>
       </div>
     </div>
@@ -98,13 +112,15 @@
         <div class="description_donate">
           <div class="text-block-4">Help us to create</div>
           <div class="new_feature">
-            <div class="image_new-feature_block"><img src="images/Frame-119.png" loading="lazy" alt="" class="magic-wand_image"></div>
+            <div class="image_new-feature_block"><img src="images/Frame-119.png" loading="lazy" alt=""
+                class="magic-wand_image"></div>
             <div class="text-block-4">new features</div>
           </div>
           <div class="text-block-4 piked-2">News Keeper is Free</div>
         </div>
         <div class="donate_link_block">
-          <div class="donate_icons_block"><img src="images/Group-303.svg" loading="lazy" alt="" class="wallet"><img src="images/Group-10ww.svg" loading="lazy" alt="" class="arrow_donate"></div>
+          <div class="donate_icons_block"><img src="images/Group-303.svg" loading="lazy" alt="" class="wallet"><img
+              src="images/Group-10ww.svg" loading="lazy" alt="" class="arrow_donate"></div>
           <div class="donate_text">
             <a href="https://www.patreon.com/newskeeper" target="_blank" class="donate_link">Support News Kepper</a>
             <div class="donate_link">on Patreon</div>
@@ -113,7 +129,8 @@
       </div>
       <a href="https://t.me/newskeeperbot" target="_blank" class="cta-button big w-inline-block">
         <div class="button_name big">To the app</div>
-        <div class="icon_holder big"><img src="images/Group-10.svg" loading="lazy" alt="" class="image_arrow-big_btn big"></div>
+        <div class="icon_holder big"><img src="images/Group-10.svg" loading="lazy" alt=""
+            class="image_arrow-big_btn big"></div>
       </a>
       <div class="contacts_list">
         <div class="contacts">
@@ -130,7 +147,10 @@
       </div>
     </div>
   </section>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65c53209364c6943ff0634aa" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65c53209364c6943ff0634aa"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
+
 </html>
