--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </aside>
         <a href="https://t.me/newskeeperbot" target="_blank" class="cta-button w-inline-block">
-          <div class="button_name">To the app</div>
+          <div class="button_name">GET STARTED FOR FREE</div>
           <div class="icon_holder"><img src="images/Group-10.svg" loading="lazy" alt="" class="image_arrow_btn"></div>
         </a>
       </div>
@@ -128,22 +128,22 @@
         </div>
       </div>
       <a href="https://t.me/newskeeperbot" target="_blank" class="cta-button big w-inline-block">
-        <div class="button_name big">To the app</div>
+        <div class="button_name big">GET STARTED FOR FREE</div>
         <div class="icon_holder big"><img src="images/Group-10.svg" loading="lazy" alt=""
             class="image_arrow-big_btn big"></div>
       </a>
       <div class="contacts_list">
         <div class="contacts">
-          <a href="https://t.me/newskeeperio" target="_blank" class="link">Telegram</a>
-          <a href="https://www.reddit.com/r/NewsKeeper/" target="_blank" class="link">Reddit</a>
-          <!-- <div class="mail_link">
-            <a href="#" target="_blank" class="link mail">info@newskeeper.com</a>
-            <a href="#" class="copy_mail_btn w-inline-block">
-              <div class="copy_mail_block"><img src="images/solar_copy-bold-duotone.svg" loading="lazy" alt="" class="copy_icon"></div>
-            </a>
-          </div> -->
+          <!-- <a href="https://t.me/newskeeperio" target="_blank" class="link">Telegram</a> -->
+          <div class="mail_link">
+            <a href="" target="_blank" class="link mail">info@newskeeper.io</a>
+          </div>
         </div>
-        <div class="copyright">© Newskeeper</div>
+        <div class="contacts">
+          <a class="copyright" href="terms.html" target="_blank" class="link">Terms of Service</a>
+          <a class="copyright" href="privacy-policy.html" target="_blank" class="link">Privacy Policy</a>
+          <div class="copyright">© News Keeper</div>
+        </div>
       </div>
     </div>
   </section>
