Updated landing page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </aside>
         <a href="https://t.me/newskeeperbot" target="_blank" class="cta-button w-inline-block">
-          <div class="button_name">GET STARTED FOR FREE</div>
+          <div class="button_name">GET STARTED</div>
           <div class="icon_holder"><img src="images/Group-10.svg" loading="lazy" alt="" class="image_arrow_btn"></div>
         </a>
       </div>
@@ -108,27 +108,9 @@
   </section>
   <section class="contacts_block">
     <div class="contacts_block_content">
-      <div class="donate_block">
-        <div class="description_donate">
-          <div class="text-block-4">Help us to create</div>
-          <div class="new_feature">
-            <div class="image_new-feature_block"><img src="images/Frame-119.png" loading="lazy" alt=""
-                class="magic-wand_image"></div>
-            <div class="text-block-4">new features</div>
-          </div>
-          <div class="text-block-4 piked-2">News Keeper is Free</div>
-        </div>
-        <div class="donate_link_block">
-          <div class="donate_icons_block"><img src="images/Group-303.svg" loading="lazy" alt="" class="wallet"><img
-              src="images/Group-10ww.svg" loading="lazy" alt="" class="arrow_donate"></div>
-          <div class="donate_text">
-            <a href="https://www.patreon.com/newskeeper" target="_blank" class="donate_link">Support News Kepper</a>
-            <div class="donate_link">on Patreon</div>
-          </div>
-        </div>
-      </div>
+
       <a href="https://t.me/newskeeperbot" target="_blank" class="cta-button big w-inline-block">
-        <div class="button_name big">GET STARTED FOR FREE</div>
+        <div class="button_name big">GET STARTED</div>
         <div class="icon_holder big"><img src="images/Group-10.svg" loading="lazy" alt=""
             class="image_arrow-big_btn big"></div>
       </a>
